--- a/requirements.txt
+++ b/requirements.txt
@@ -77,7 +77,7 @@ pre-commit==3.5.0
 # torch==2.6.0  # Stable version that works well
 
 # peft==0.7.1
-# trl==0.7.4
+trl==0.7.4
 # # bitsandbytes - Install separately for Windows (see instructions)
 # accelerate==0.25.0
 # omegaconf==2.3.0
